# proto

./: .gitignore  .gitlab-ci.yml  AGENTS.md  LICENSE  README.md
proto/: AGENTS.md  features.yaml
proto/dev/namlit/common/v1/: error.proto  location.proto  pagination.proto  timeframe.proto
proto/dev/namlit/domain/about_me/v1/: about_me.proto
proto/dev/namlit/domain/contact/v1/: contact.proto
proto/dev/namlit/domain/education_history/v1/: education_history.proto
proto/dev/namlit/domain/languages/v1/: languages.proto
proto/dev/namlit/domain/project/v1/: project.proto
proto/dev/namlit/domain/resume_download/v1/: resume_download.proto
proto/dev/namlit/domain/techstack/v1/: techstack.proto
rust_proto/: .gitignore  AGENTS.md  Cargo.toml  build.rs  clean_and_rebuild.sh
rust_proto/src/: canonical.rs  common.rs  descriptor_set.rs  domain.rs  lib.rs  macros.rs
rust_proto/src/api/: read.rs  write.rs
rust_proto/src/canonical/: common.rs  domain.rs
rust_proto/src/canonical/api/: read.rs  write.rs
rust_proto/tests/: feature_smoke.rs
ts_proto/: .gitignore  AGENTS.md  buf.gen.yaml  build.sh  features.yaml  package.json  tsconfig.json
ts_proto/scripts/: generate.ts
ts_proto/scripts/generator/: buf_generate.ts  errors.ts  index_generation.ts  manifests.ts  models.ts  paths.ts  pipeline.ts  proto_graph.ts  selection.ts  utilities.ts
ts_proto/scripts/generator/boundary/: filesystem.ts  process.ts  yaml.ts
ts_proto/test/: index_generation.test.ts  manifests.test.ts  proto_graph.test.ts  selection.test.ts
(+34 files in other folders)
